apps/hello-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: apps
spec:
  selector:
    app: hello-app
  ports:
  - port: 80
    targetPort: 8080
